--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     },
     "scripts": {
         "test": "mocha test/test.mjs",
-        "cov": "c8 npm run test"
+        "cov": "c8 npm run test",
+        "docgen": ""
     },
     "dependencies": {
         "acorn": "^8.8.2",
@@ -21,7 +22,14 @@
     "version": "0.8.0",
     "devDependencies": {
         "c8": "^7.13.0",
+        "documentation": "^14.0.1",
         "mocha": "^10.2.0",
         "nyc": "^15.1.0"
-    }
+    },
+    "licenses": [
+        {
+            "type": "MIT",
+            "url": "https://github.com/brentertz/scapegoat/blob/master/LICENSE-MIT"
+        }
+    ]
 }
