--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "scripts": {
         "test": "mocha test/test.mjs",
         "cov": "c8 npm run test",
-        "docgen": ""
+        "docgen": "npx documentation build src/logging-espree.js -f md"
     },
     "dependencies": {
         "acorn": "^8.8.2",
@@ -27,7 +27,7 @@
         "estraverse": "^5.2.0",
         "underscore": "^1.12.0"
     },
-    "version": "0.8.0",
+    "version": "1.0.0",
     "devDependencies": {
         "c8": "^7.13.0",
         "documentation": "^14.0.1",
